--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "conlaser",
+  "name": "conlasermx",
   "version": "0.1.0",
+  "homepage": "https://gthbdevweb.github.io/conlasermx/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
